== 0.x.y / yyyy-mm-dd

== 0.2.4 / 2007-10-xx
* Look for config file at config/geminstaller.yml as well as geminstaller.yml
* Make startup message ('Installing Gems...') debug level instead of info

== 0.2.3 / 2007-08-03
* remove Autogem#process_gem debug statement
* Don't reset test_gem_home in test_gem_home_spec, shaves about 18 seconds off suite
* Suppress output of rubygems installation during tests with --quiet flag

== 0.2.2 / 2007-07-07
* Fix performance problems with autogem command (don't manually recurse dependencies, gem method does it already)
* Fix bad links in docs

== 0.2.1 / 2007-06-07
* Fixes to handle internal refactoring of command classes in RubyGems 0.9.3

== 0.2.0 / 2007-05-13
* First public release

== 0.0.1 / 2006-07-29

* Initial Creation