@@ -1,0 +1,4 @@
+module GemInstaller
+  class GemInstallerAccessError < GemInstaller::GemInstallerError
+  end
+end
