@@ -60,6 +60,7 @@ require File.expand_path("#{dir}/gem_runner_proxy")
 require File.expand_path("#{dir}/gem_source_index_proxy")
 require File.expand_path("#{dir}/gem_spec_manager")
 require File.expand_path("#{dir}/geminstaller_error")
+require File.expand_path("#{dir}/geminstaller_access_error")
 require File.expand_path("#{dir}/install_processor")
 require File.expand_path("#{dir}/missing_dependency_finder")
 require File.expand_path("#{dir}/missing_file_error")
