@@ -3,6 +3,7 @@
 == 0.2.4 / 2007-10-xx
 * Look for config file at config/geminstaller.yml as well as geminstaller.yml
 * Make startup message ('Installing Gems...') debug level instead of info
+* Add custom descriptive error if user gets access permission error when installing a gem
 
 == 0.2.3 / 2007-08-03
 * remove Autogem#process_gem debug statement
